gccida/c1/compute_use_by_pseudos
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_use_by_pseudos/src/reload1.c:1075:15: error: use of undeclared identifier 'off_6CC868'
fancy_abort( &off_6CC868[4], 573, "compute_use_by_pseudos"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_use_by_pseudos/src/reload1.c:1085:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = ( ( unsigned int)( mode_class_0[v16] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/compute_use_by_pseudos/src/obj/reload1.o] Error 1
